# pardiso-wrapper

./: CMakeLists.txt  README.md  pardiso.hpp
cmake/Modules/: FindPARDISO.cmake  Findblaze.cmake
test/: pardiso_test.cpp
